objects/CAObj1__c.object
<CustomObject>
    <fields>
        <fullName>CAField1__c</fullName>
        <label>CAField1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CAField2__c</fullName>
        <label>CAField2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>123</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAField3__c</fullName>
        <label>CAField3</label>
        <length>8</length>
        <type>Text</type>
    </fields>
</CustomObject>